--- a/.github/workflows/build-immortalwrt-mt798x.yml
+++ b/.github/workflows/build-immortalwrt-mt798x.yml
@@ -93,6 +93,12 @@ jobs:
         rm -rf ./feeds/packages/net/mosdns && cp -r -f ./feeds/smpackage/mosdns ./feeds/packages/net/mosdns
         # 安装 golang 1.23
         rm -rf feeds/packages/lang/golang && git clone https://github.com/sbwml/packages_lang_golang -b 23.x feeds/packages/lang/golang
+        # 替换一下passwall和xray-core为官方源而非immortalwrt的源
+        rm -rf feeds/luci/applications/luci-app-passwall/
+        rm -rf feeds/packages/net/xray-core/
+        rm -rf feeds/packages/net/xray-plugin/
+        git clone https://github.com/xiaorouji/openwrt-passwall package/luci-app-passwall
+        git clone https://github.com/xiaorouji/openwrt-passwall-packages package/luci-app-passwall-packages
         # 重新安装一次 防止依赖错误
         ./scripts/feeds install -a
         chmod +x $GITHUB_WORKSPACE/$DIY_SH && $GITHUB_WORKSPACE/$DIY_SH
