--- a/.github/workflows/build-immortalwrt-mt798x.yml
+++ b/.github/workflows/build-immortalwrt-mt798x.yml
@@ -104,10 +104,13 @@ jobs:
         ./scripts/feeds update -a && ./scripts/feeds install -a
         # 防止包冲突
         rm -rf feeds/smpackage/{base-files,dnsmasq,firewall*,fullconenat,libnftnl,nftables,ppp,opkg,ucl,upx,vsftpd-alt,miniupnpd-iptables,wireless-regdb}
+        rm -rf feeds/luci/applications/luci-app-mosdns
+        rm -rf feeds/packages/net/{alist,adguardhome,mosdns,smartdns}
         # 替换原版 mosdns 防止 luci 界面编译失败
         rm -rf ./feeds/packages/net/mosdns && cp -r -f ./feeds/smpackage/mosdns ./feeds/packages/net/mosdns
-        # 安装 golang 1.23
-        rm -rf feeds/packages/lang/golang && git clone https://github.com/sbwml/packages_lang_golang -b 23.x feeds/packages/lang/golang
+        # 安装 golang 1.23 使用kenzok8源
+        rm -rf feeds/packages/lang/golang
+        git clone https://github.com/kenzok8/golang feeds/packages/lang/golang
         # 替换一下passwall和xray-core为官方源而非immortalwrt的源
         rm -rf feeds/luci/applications/luci-app-passwall/
         rm -rf feeds/packages/net/xray-core/
