--- a/configs/rax3000m-emmc_mtksdk.config
+++ b/configs/rax3000m-emmc_mtksdk.config
@@ -1,13 +1,10 @@
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_mt7981=y
-CONFIG_TARGET_mediatek_mt7981=y
 CONFIG_TARGET_mediatek_mt7981_DEVICE_cmcc_rax3000m=y
 CONFIG_TARGET_MULTI_PROFILE=y
-CONFIG_DEVEL=y
-CONFIG_TOOLCHAINOPTS=y
 CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_TARGET_PER_DEVICE_ROOTFS=y
-CONFIG_AFALG_Update_CTR_IV=y
+CONFIG_AFALG_UPDATE_CTR_IV=y
 CONFIG_BUSYBOX_CONFIG_BLKID=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_BLKID_TYPE=y
 CONFIG_BUSYBOX_CONFIG_VOLUMEID=y
@@ -15,7 +12,7 @@ CONFIG_CONNINFRA_AUTO_UP=y
 CONFIG_CONNINFRA_EMI_SUPPORT=y
 # CONFIG_GDB is not set
 CONFIG_INCLUDE_CONFIG=y
-CONFIG JSON_OVERVIEW_IMAGE_INFO=y
+CONFIG_JSON_OVERVIEW_IMAGE_INFO=y
 # CONFIG_KERNEL_BLK_DEV_THROTTLING is not set
 # CONFIG_KERNEL_CFS_BANDWIDTH is not set
 CONFIG_KERNEL_CGROUP_DEVICE=y
@@ -31,11 +28,11 @@ CONFIG_MTK_ANTENNA_CONTROL_SUPPORT=y
 CONFIG_MTK_APCLI_SUPPORT=y
 CONFIG_MTK_ATE_SUPPORT=y
 CONFIG_MTK_BACKGROUNDSCAN_SUPPORT=y
-CONFIG_MTK CAL_BIN_FILE_SUPPORT=y
-CONFIG_MTK CFG_SUPPORT_FALCON_MURU=y
-CONFIG_MTK CFG_SUPPORT_FALCON_PP=y
-CONFIG_MTK CFG_SUPPORT_FALCON_SR=y
-CONFIG_MTK CFG_SUPPORT_FALCON_TXCMD_DBG=y
+CONFIG_MTK_CAL_BIN_FILE_SUPPORT=y
+CONFIG_MTK_CFG_SUPPORT_FALCON_MURU=y
+CONFIG_MTK_CFG_SUPPORT_FALCON_PP=y
+CONFIG_MTK_CFG_SUPPORT_FALCON_SR=y
+CONFIG_MTK_CFG_SUPPORT_FALCON_TXCMD_DBG=y
 CONFIG_MTK_CHIP_MT7981=y
 CONFIG_MTK_CONNINFRA_APSOC=y
 CONFIG_MTK_CONNINFRA_APSOC_MT7981=y
@@ -78,7 +75,7 @@ CONFIG_MTK_MT_WIFI_MT7981_20240823=y
 CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
 CONFIG_MTK_MUMIMO_SUPPORT=y
 CONFIG_MTK_MU_RA_SUPPORT=y
-CONFIG_MTK_OFFCHannelSCAN_FEATURE=y
+CONFIG_MTK_OFFCHANNELSCAN_FEATURE=y
 CONFIG_MTK_OWE_SUPPORT=y
 CONFIG_MTK_QOS_R1_SUPPORT=y
 CONFIG_MTK_RA_PHY_RATE_SUPPORT=y
@@ -116,155 +113,155 @@ CONFIG_MTK_WSC_V2_SUPPORT=y
 # CONFIG_OPENSSL_ENGINE_BUILTIN is not set
 # CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM is not set
 CONFIG_OPENSSL_WITH_NPN=y
-# CONFIG_package_turboacc_include_flow_offloading is not set
-CONFIG_package_turboacc_include_no_fastpath=y
-CONFIG_package_blockd=y
-CONFIG_package_ca-certifiates=y
-CONFIG_package_datconf=y
-CONFIG_package_datconf-lua=y
-CONFIG_package_ebtables=y
-CONFIG_package_ethtool=y
-CONFIG_package_htop=y
-CONFIG_package_ip-bridge=y
-CONFIG_package_ip6tables-extra=y
-CONFIG_package_ipset=y
-CONFIG_package_iptables-mod-conntrack-extra=y
-CONFIG_package_iptables-mod-extra=y
-CONFIG_package_iptables-mod-filter=y
-CONFIG_package_iptables-mod-hashlimit=y
-CONFIG_package_iptables-mod-iface=y
-CONFIG_package_iptables-mod-ipmark=y
-CONFIG_package_iptables-mod-ipopt=y
-CONFIG_package_iptables-mod-iprange=y
-CONFIG_package_iptables-mod-ipv4options=y
-CONFIG_package_iptables-mod-nat-extra=y
-CONFIG_package_iptables-mod-proto=y
-CONFIG_package_iptables-mod-tee=y
-CONFIG_package_iptables-mod-tproxy=y
-CONFIG_package_iptables-mod-u32=y
-CONFIG_package_iw=y
-CONFIG_package_iwinfo=y
-CONFIG_package_kmod-ata-core=y
-CONFIG_package_kmod-conninfra=y
-CONFIG_package_kmod-crypto-acompress=y
-CONFIG_package_kmod-crypto-ccm=y
-CONFIG_package_kmod-crypto-cmac=y
-CONFIG_package_kmod-crypto-crc32c=y
-CONFIG_package_kmod-crypto-ctr=y
-CONFIG_package_kmod-crypto-des=y
-CONFIG_package_kmod-crypto-gcm=y
-CONFIG_package_kmod-crypto-gf128=y
-CONFIG_package_kmod-crypto-ghash=y
-CONFIG_package_kmod-crypto-hmac=y
-CONFIG_package_kmod-crypto-md4=y
-CONFIG_package_kmod-crypto-md5=y
-CONFIG_package_kmod-crypto-rng=y
-CONFIG_package_kmod-crypto-seqiv=y
-CONFIG_package_kmod-crypto sha256=y
-CONFIG_package_kmod-crypto sha512=y
-CONFIG_package_kmod-ebtables=y
-CONFIG_package_kmod-ebtables-ipv4=y
-CONFIG_package_kmod-ebtables-ipv6=y
-CONFIG_package_kmod-fs-autofs4=y
-CONFIG_package_kmod-fs-vfat=y
-CONFIG_package_kmod-ifb=y
-CONFIG_package_kmod-inet-diag=y
-CONFIG_package_kmod-ip6tables-extra=y
-CONFIG_package_kmod-ipt-compat-xtables=y
-CONFIG_package_kmod-ipt-conntrack-extra=y
-CONFIG_package_kmod-ipt-extra=y
-CONFIG_package_kmod-ipt-filter=y
-CONFIG_package_kmod-ipt-hashlimit=y
-CONFIG_package_kmod-ipt-iface=y
-CONFIG_package_kmod-ipt-ipmark=y
-CONFIG_package_kmod-ipt-ipopt=y
-CONFIG_package_kmod-ipt-iprange=y
-CONFIG_package_kmod-ipt-ipv4options=y
-CONFIG_package_kmod-ipt-nat-extra=y
-CONFIG_package_kmod-ipt-offload=y
-CONFIG_package_kmod-ipt-proto=y
-CONFIG_package_kmod-ipt-raw6=y
-CONFIG_package_kmod-ipt-tee=y
-CONFIG_package_kmod-ipt-tproxy=y
-CONFIG_package_kmod-ipt-u32=y
-CONFIG_package_kmod-lib-crc32c=y
-CONFIG_package_kmod-lib-lzo=y
-CONFIG_package_kmod-mediatek_hnat=y
-CONFIG_package_kmod-mt_wifi=y
-CONFIG_package_kmod-nf-flow=y
-CONFIG_package_kmod-nls-base=y
-CONFIG_package_kmod-nls-cp437=y
-CONFIG_package_kmod-nls-iso8859-1=y
-CONFIG_package_kmod-nls-utf8=y
-CONFIG_package_kmod-sched-core=y
-CONFIG_package_kmod-scsi-core=y
-CONFIG_package_kmod-tcp-bbr=y
-CONFIG_package_kmod-tun=y
-CONFIG_package_kmod-warp=y
-CONFIG_package_kmod-zram=y
-CONFIG_package_kvcedit=y
-CONFIG_package_libatomic=y
-CONFIG_package_libblkid=y
-CONFIG_package_libcap-ng=y
-CONFIG_package_libcbor=y
-CONFIG_package_libevdev=y
-CONFIG_package_libfido2=y
-CONFIG_package_libipset=y
-CONFIG_package_libkvcutil=y
-CONFIG_package_libncurses=y
-CONFIG_package_libnl=y
-CONFIG_package_libnl-core=y
-CONFIG_package_libnl-genl=y
-CONFIG_package_libnl-nf=y
-CONFIG_package_libnl-route=y
-CONFIG_package_libopenssl-afalg_sync=y
-CONFIG_package_libopenssl-devcrypto=y
-CONFIG_package_libpcap=y
-CONFIG_package_libstdcpp=y
-CONFIG_package_libudev-zero=y
-CONFIG_package_libuuid=y
-CONFIG_package_lua-cjson=y
-CONFIG_package_luci-app-eqos-mtk=y
-CONFIG_package_openvpn=n
-CONFIG_package_wireguard=n
-CONFIG_package_luci-app-openvpn=n
-CONFIG_package_luci-app-wireguard=n
-CONFIG_package_shadowsocks-libev=n
-CONFIG_package_luci-app-ssr-plus=n
-CONFIG_package_luci-app-vssr=n
-CONFIG_package_luci-app-passwall=n
-CONFIG_package_ksmbd-server=y
-CONFIG_package_ksmbd-utils=y
-CONFIG_package_luci-app-ksmbd=y
-CONFIG_package_luci-i18n-base-zh-cn=y
-CONFIG_package_luci-app-turboacc-mtk=y
-CONFIG_package_luci-app-upnp=y
-CONFIG_package_luci-i18n-eqos-mtk-zh-cn=y
-CONFIG_package_luci-i18n-mtwifi-cfg-zh-cn=y
-CONFIG_package_luci-i18n-turboacc-mtk-zh-cn=y
-CONFIG_package_luci-i18n-upnp-zh-cn=y
-CONFIG_package_luci-themes-argon=y
-CONFIG_package_luci-them e-bootstrap-mod=y
-CONFIG_package_mii_mgr=y
-CONFIG_package_miniupnpd=y
-CONFIG_package_mtkhqos_util=y
-CONFIG_package_mtwifi-cfg=y
-CONFIG_package_nano=y
-CONFIG_package_openssh-keygen=y
-CONFIG_package_openssh-sftp-server=y
-CONFIG_package_openssl-util=y
-CONFIG_packageregs=y
-CONFIG_package_resolveip=y
-CONFIG_package_swconfig=y
-CONFIG_package_switch=y
-CONFIG_package_tc-mod-iptables=y
-CONFIG_package_tc-tiny=y
-CONFIG_package_tc pdump=y
-CONFIG_package_terminfo=y
-CONFIG_package_wifi-dats=y
-CONFIG_package_wireless-regdb=y
-CONFIG_package_wireless-tools=y
-CONFIG_package_zram-swap=y
+# CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING is not set
+CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH=y
+CONFIG_PACKAGE_BLOCKD=y
+CONFIG_PACKAGE_CA_CERTIFICATES=y
+CONFIG_PACKAGE_DATCONF=y
+CONFIG_PACKAGE_DATCONF_LUA=y
+CONFIG_PACKAGE_EBTABLES=y
+CONFIG_PACKAGE_ETHTOOL=y
+# CONFIG_PACKAGE_HTOP is not set
+CONFIG_PACKAGE_IP_BRIDGE=y
+CONFIG_PACKAGE_IP6TABLES_EXTRA=y
+CONFIG_PACKAGE_IPSET=y
+CONFIG_PACKAGE_IPTABLES_MOD_CONNTRACK_EXTRA=y
+CONFIG_PACKAGE_IPTABLES_MOD_EXTRA=y
+CONFIG_PACKAGE_IPTABLES_MOD_FILTER=y
+CONFIG_PACKAGE_IPTABLES_MOD_HASHLIMIT=y
+CONFIG_PACKAGE_IPTABLES_MOD_IFACE=y
+CONFIG_PACKAGE_IPTABLES_MOD_IPMARK=y
+CONFIG_PACKAGE_IPTABLES_MOD_IPOPT=y
+CONFIG_PACKAGE_IPTABLES_MOD_IPRANGE=y
+CONFIG_PACKAGE_IPTABLES_MOD_IPV4OPTIONS=y
+CONFIG_PACKAGE_IPTABLES_MOD_NAT_EXTRA=y
+CONFIG_PACKAGE_IPTABLES_MOD_PROTO=y
+CONFIG_PACKAGE_IPTABLES_MOD_TEE=y
+CONFIG_PACKAGE_IPTABLES_MOD_TPROXY=y
+CONFIG_PACKAGE_IPTABLES_MOD_U32=y
+CONFIG_PACKAGE_IW=y
+CONFIG_PACKAGE_IWINFO=y
+CONFIG_PACKAGE_KMOD_ATA_CORE=y
+CONFIG_PACKAGE_KMOD_CONNINFRA=y
+CONFIG_PACKAGE_KMOD_CRYPTO_ACOMPRESS=y
+CONFIG_PACKAGE_KMOD_CRYPTO_CCM=y
+CONFIG_PACKAGE_KMOD_CRYPTO_CMAC=y
+CONFIG_PACKAGE_KMOD_CRYPTO_CRC32C=y
+CONFIG_PACKAGE_KMOD_CRYPTO_CTR=y
+CONFIG_PACKAGE_KMOD_CRYPTO_DES=y
+CONFIG_PACKAGE_KMOD_CRYPTO_GCM=y
+CONFIG_PACKAGE_KMOD_CRYPTO_GF128=y
+CONFIG_PACKAGE_KMOD_CRYPTO_GHASH=y
+CONFIG_PACKAGE_KMOD_CRYPTO_HMAC=y
+CONFIG_PACKAGE_KMOD_CRYPTO_MD4=y
+CONFIG_PACKAGE_KMOD_CRYPTO_MD5=y
+CONFIG_PACKAGE_KMOD_CRYPTO_RNG=y
+CONFIG_PACKAGE_KMOD_CRYPTO_SEQIV=y
+CONFIG_PACKAGE_KMOD_CRYPTO_SHA256=y
+CONFIG_PACKAGE_KMOD_CRYPTO_SHA512=y
+CONFIG_PACKAGE_KMOD_EBTABLES=y
+CONFIG_PACKAGE_KMOD_EBTABLES_IPV4=y
+CONFIG_PACKAGE_KMOD_EBTABLES_IPV6=y
+CONFIG_PACKAGE_KMOD_FS_AUTOFS4=y
+CONFIG_PACKAGE_KMOD_FS_VFAT=y
+CONFIG_PACKAGE_KMOD_IFB=y
+CONFIG_PACKAGE_KMOD_INET_DIAG=y
+CONFIG_PACKAGE_KMOD_IP6TABLES_EXTRA=y
+CONFIG_PACKAGE_KMOD_IPT_COMPAT_XTABLES=y
+CONFIG_PACKAGE_KMOD_IPT_CONNTRACK_EXTRA=y
+CONFIG_PACKAGE_KMOD_IPT_EXTRA=y
+CONFIG_PACKAGE_KMOD_IPT_FILTER=y
+CONFIG_PACKAGE_KMOD_IPT_HASHLIMIT=y
+CONFIG_PACKAGE_KMOD_IPT_IFACE=y
+CONFIG_PACKAGE_KMOD_IPT_IPMARK=y
+CONFIG_PACKAGE_KMOD_IPT_IPOPT=y
+CONFIG_PACKAGE_KMOD_IPT_IPRANGE=y
+CONFIG_PACKAGE_KMOD_IPT_IPV4OPTIONS=y
+CONFIG_PACKAGE_KMOD_IPT_NAT_EXTRA=y
+CONFIG_PACKAGE_KMOD_IPT_OFFLOAD=y
+CONFIG_PACKAGE_KMOD_IPT_PROTO=y
+CONFIG_PACKAGE_KMOD_IPT_RAW6=y
+CONFIG_PACKAGE_KMOD_IPT_TEE=y
+CONFIG_PACKAGE_KMOD_IPT_TPROXY=y
+CONFIG_PACKAGE_KMOD_IPT_U32=y
+CONFIG_PACKAGE_KMOD_LIB_CRC32C=y
+CONFIG_PACKAGE_KMOD_LIB_LZO=y
+CONFIG_PACKAGE_KMOD_MEDIATEK_HNAT=y
+CONFIG_PACKAGE_KMOD_MT_WIFI=y
+CONFIG_PACKAGE_KMOD_NF_FLOW=y
+CONFIG_PACKAGE_KMOD_NLS_BASE=y
+CONFIG_PACKAGE_KMOD_NLS_CP437=y
+CONFIG_PACKAGE_KMOD_NLS_ISO8859_1=y
+CONFIG_PACKAGE_KMOD_NLS_UTF8=y
+CONFIG_PACKAGE_KMOD_SCHED_CORE=y
+CONFIG_PACKAGE_KMOD_SCSI_CORE=y
+CONFIG_PACKAGE_KMOD_TCP_BBR=y
+CONFIG_PACKAGE_KMOD_TUN=y
+CONFIG_PACKAGE_KMOD_WARP=y
+CONFIG_PACKAGE_KMOD_ZRAM=y
+CONFIG_PACKAGE_KVCEDIT=y
+CONFIG_PACKAGE_LIBATOMIC=y
+CONFIG_PACKAGE_LIBBLKID=y
+CONFIG_PACKAGE_LIBCAP_NG=y
+CONFIG_PACKAGE_LIBCBOR=y
+CONFIG_PACKAGE_LIBEVDEV=y
+CONFIG_PACKAGE_LIBFIDO2=y
+CONFIG_PACKAGE_LIBIPSET=y
+CONFIG_PACKAGE_LIBKVCUTIL=y
+CONFIG_PACKAGE_LIBNCURSES=y
+CONFIG_PACKAGE_LIBNL=y
+CONFIG_PACKAGE_LIBNL_CORE=y
+CONFIG_PACKAGE_LIBNL_GENL=y
+CONFIG_PACKAGE_LIBNL_NF=y
+CONFIG_PACKAGE_LIBNL_ROUTE=y
+CONFIG_PACKAGE_LIBOPENSSL_AFALG_SYNC=y
+CONFIG_PACKAGE_LIBOPENSSL_DEVCRYPTO=y
+CONFIG_PACKAGE_LIBPCAP=y
+CONFIG_PACKAGE_LIBSTDCPP=y
+CONFIG_PACKAGE_LIBUDEV_ZERO=y
+CONFIG_PACKAGE_LIBUUID=y
+CONFIG_PACKAGE_LUA_CJSON=y
+CONFIG_PACKAGE_LUCI_APP_EQOS_MTK=y
+# CONFIG_PACKAGE_OPENVPN is not set
+# CONFIG_PACKAGE_WIREGUARD is not set
+# CONFIG_PACKAGE_LUCI_APP_OPENVPN is not set
+# CONFIG_PACKAGE_LUCI_APP_WIREGUARD is not set
+# CONFIG_PACKAGE_SHADOWSOCKS_LIBEV is not set
+# CONFIG_PACKAGE_LUCI_APP_SSR_PLUS is not set
+# CONFIG_PACKAGE_LUCI_APP_VSSR is not set
+# CONFIG_PACKAGE_LUCI_APP_PASSWALL is not set
+CONFIG_PACKAGE_KSMBD_SERVER=y
+CONFIG_PACKAGE_KSMBD_UTILS=y
+CONFIG_PACKAGE_LUCI_APP_KSMBD=y
+CONFIG_PACKAGE_LUCI_I18N_BASE_ZH_CN=y
+CONFIG_PACKAGE_LUCI_APP_TURBOACC_MTK=y
+CONFIG_PACKAGE_LUCI_APP_UPNP=y
+CONFIG_PACKAGE_LUCI_I18N_EQOS_MTK_ZH_CN=y
+CONFIG_PACKAGE_LUCI_I18N_MTWIFI_CFG_ZH_CN=y
+CONFIG_PACKAGE_LUCI_I18N_TURBOACC_MTK_ZH_CN=y
+CONFIG_PACKAGE_LUCI_I18N_UPNP_ZH_CN=y
+CONFIG_PACKAGE_LUCI_THEMES_ARGON=y
+CONFIG_PACKAGE_LUCI_THEME_BOOTSTRAP_MOD=y
+CONFIG_PACKAGE_MII_MGR=y
+CONFIG_PACKAGE_MINIUPNPD=y
+CONFIG_PACKAGE_MTKHQOS_UTIL=y
+CONFIG_PACKAGE_MTWIFI_CFG=y
+# CONFIG_PACKAGE_NANO is not set
+CONFIG_PACKAGE_OPENSSH_KEYGEN=y
+CONFIG_PACKAGE_OPENSSH_SFTP_SERVER=y
+CONFIG_PACKAGE_OPENSSL_UTIL=y
+CONFIG_PACKAGE_REGS=y
+CONFIG_PACKAGE_RESOLVEIP=y
+CONFIG_PACKAGE_SWCONFIG=y
+CONFIG_PACKAGE_SWITCH=y
+CONFIG_PACKAGE_TC_MOD_IPTABLES=y
+CONFIG_PACKAGE_TC_TINY=y
+CONFIG_PACKAGE_TCPDUMP=y
+CONFIG_PACKAGE_TERMINFO=y
+CONFIG_PACKAGE_WIFI_DATS=y
+CONFIG_PACKAGE_WIRELESS_REGDB=y
+CONFIG_PACKAGE_WIRELESS_TOOLS=y
+CONFIG_PACKAGE_ZRAM_SWAP=y
 # CONFIG_PKG_CHECK_FORMAT_SECURITY is not set
 # CONFIG_PKG_FORTIFY_SOURCE_1 is not set
 CONFIG_PKG_FORTIFY_SOURCE_2=y
@@ -273,15 +270,15 @@ CONFIG_WARP_DBG_SUPPORT=y
 CONFIG_WARP_VERSION=2
 CONFIG_WED_HW_RRO_SUPPORT=y
 # CONFIG_WOLFSSL_HAS_ECC25519 is not set
-CONFIG_first_card=y
-CONFIG_first_card_name="MT7981"
+CONFIG_FIRST_CARD=y
+CONFIG_FIRST_CARD_NAME="MT7981"
 # CONFIG_AFALG_FALLBACK is not set
 # CONFIG_MTK_BAND_STEERING is not set
 # CONFIG_MTK_DEFAULT_5G_PROFILE is not set
 # CONFIG_MTK_MAC_REPEATER_SUPPORT is not set
 # CONFIG_MTK_MULTI_PROFILE_SUPPORT is not set
 # CONFIG_MTK_PCIE_ASPM_DYM_CTRL_SUPPORT is not set
-# CONFIG_MTK_PRE CAL_TRX_SET1_SUPPORT is not set
-# CONFIG_MTK_PRE CAL_TRX_SET2_SUPPORT is not set
-# CONFIG_MTK_RLM CAL_CACHE_SUPPORT is not set
+# CONFIG_MTK_PRE_CAL_TRX_SET1_SUPPORT is not set
+# CONFIG_MTK_PRE_CAL_TRX_SET2_SUPPORT is not set
+# CONFIG_MTK_RLM_CAL_CACHE_SUPPORT is not set
 # CONFIG_MTK_SNIFFER_RADIOTAP_SUPPORT is not set
